--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
+    "react-youtube": "^10.1.0",
     "sort-by": "^1.2.0",
     "swiper": "^11.0.5"
   },
