--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@tanstack/react-query": "^5.15.5",
     "firebase": "^10.7.1",
     "framer-motion": "^10.16.5",
     "localforage": "^1.10.0",
